Cambio en solicitudes

--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -51,7 +51,7 @@
                 <br />
             </div>
             <div class="table-responsive">
-                <table class="table table-striped" id="dtBasicExample">
+                <table class="table table-striped">
                     <thead>
                         <tr>
                             <th>Folio</th>
