--- a/TravelExpenses/Views/Shared/_Menu.cshtml
+++ b/TravelExpenses/Views/Shared/_Menu.cshtml
@@ -81,14 +81,13 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" data-toggle="collapse" href="#ui-basic2" aria-expanded="false" aria-controls="ui-basic2">
-
                     <i class="mdi mdi-account menu-icon"></i>
                     <span class="menu-title">Revisor</span>
                     <i class="menu-arrow"></i>
                 </a>
                 <div class="collapse" id="ui-basic2">
                     <ul class="nav flex-column sub-menu">
-                        <li class="nav-item"> <a class="nav-link" asp-controller="Revisor" asp-action="Lista">Aprobar</a></li>
+                        <li class="nav-item"> <a class="nav-link" asp-controller="Comprobacion" asp-action="ComprobacionSolicitud">Aprobar</a></li>
 
                     </ul>
                 </div>
