--- a/TravelExpenses/Views/Comprobacion/ComprobacionSolicitud.cshtml
+++ b/TravelExpenses/Views/Comprobacion/ComprobacionSolicitud.cshtml
@@ -18,7 +18,6 @@
             </div>
         </div>
             <div class="card-body">
-                
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
@@ -45,15 +44,15 @@
                                 <td>@item.Estatus</td>
 
                                 <td>
-                                    @if (item.Estatus.Equals("Comprobada"))
+                                    @if (item.Estatus.Equals("Revisada"))
                                     {
-                                        <a class="btn btn-lg" asp-controller="Aprobador" asp-action="Detalles" asp-route-folio="@item.Folio">
+                                        <a class="btn btn-lg" asp-controller="Comprobacion" asp-action="Detalles" asp-route-folio="@item.Folio">
                                             <i class="fas fa-edit"></i>
                                         </a>
                                     }
-                                    else if (item.Estatus.Equals("PorAutorizar"))
+                                    else if (item.Estatus.Equals("PorLiberar"))
                                     {
-                                        <a class="btn btn-lg" asp-controller="Aprobador" asp-action="DetallesPorAutorizar" asp-route-folio="@item.Folio">
+                                        <a class="btn btn-lg" asp-controller="Comprobacion" asp-action="DetallesPorAutorizar" asp-route-folio="@item.Folio">
                                             <i class="fas fa-edit"></i>
                                         </a>
                                     }
@@ -74,7 +73,7 @@
     function ObtenerSolcitudes() {
         var estatus = $("#estatus").children("option:selected").text();
         var row = "";
-        var url = "/Aprobador/SolicitudesEstatus/";
+        var url = "/Comprobacion/SolicitudesEstatus/";
         $.ajax({
             url: url,
             data: { estatus: estatus },
@@ -91,9 +90,9 @@
                 else {
                     debugger;
                     $.each(response, function (index, item) {
-                        if (item.estatus == "PorAutorizar") {
+                        if (item.estatus == "PorLiberar") {
                             row +=
-                                '<tr>' 
+                                '<tr>'
                                     + '<td>' + item.folio +'</td>'
                                     + '<td>' + item.descripcion +'</td>'
                                     + '<td>' + item.userName +'</td>'
@@ -101,16 +100,16 @@
                                     + '<td>' + item.importeComprobado +'</td>'
                                     + '<td>' + item.estatus+'</td>'
                                     + '<td>'
-                                        +'<a class="btn btn-lg" href="/Aprobador/DetallesPorAutorizar?folio=' + item.folio + '">' 
+                            +'<a class="btn btn-lg" href="/Comprobacion/DetallesPorAutorizar?folio=' + item.folio + '">'
                                         + "<i class='fas fa-edit'></i>"
-                                        +'</a>' 
+                                        +'</a>'
                                     +'</td>'
                                 +'</tr>';
                         }
-                        else if (item.estatus == "Comprobada") {
+                        else if (item.estatus == "Revisada") {
 
                             row +=
-                                '<tr>' 
+                                '<tr>'
                                 + '<td>' + item.folio +'</td>'
                                 + '<td>' + item.descripcion +'</td>'
                                 + '<td>' + item.userName +'</td>'
@@ -118,9 +117,9 @@
                                 + '<td>' + item.importeComprobado +'</td>'
                                 + '<td>' + item.estatus+'</td>'
                                 + '<td>'
-                                    +'<a class="btn btn-lg"  href="/Aprobador/Detalles?folio=' + item.folio + '">' 
+                            +'<a class="btn btn-lg"  href="/Comprobacion/Detalles?folio=' + item.folio + '">'
                                     + "<i class='fas fa-edit'></i>"
-                                    +'</a>' 
+                                    +'</a>'
                                 +'</td>'
                                 +'</tr>';
                         }
