rediseño de manager of roles

--- a/TravelExpenses/Views/Roles/Index.cshtml
+++ b/TravelExpenses/Views/Roles/Index.cshtml
@@ -6,7 +6,7 @@
     <div>
         <br />
         <div class="row w-100 mx-0">
-            <partial name="_AddUserToRole" model="new TravelExpenses.Controllers.UpdateUserRoleViewModel() { Users = Model.Users, Roles = Model.Roles }">
+            <partial name="_AddUserToRole" model="new TravelExpenses.Controllers.UpdateUserRoleViewModel() { Users = Model.Users, Roles = Model.Roles,CentroCostos=Model.CentroCostos }">
         </div>
 
         <br />
