--- a/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
+++ b/TravelExpenses/Views/Roles/_AddUserToRole.cshtml
@@ -7,7 +7,7 @@
     <form asp-controller="Roles" asp-action="UpdateUserRole" method="post">
         <h2>Agregar Roles a usuario</h2>
 
-
+        <label>Usuario</label>
         <select asp-for="UserEmail" class="form-control" onchange="SelectItem()">
             <option>Selecciona un usuario</option>
 
@@ -21,20 +21,36 @@
             }
 
         </select>
+        <label>Centro de Costos</label>
+        <select asp-for="ClaveCentroCosto" class="form-control" onchange="SelectItem()">
+            <option>Selecciona un Centro de Costos</option>
+
+            @{
+                foreach (var item in Model.CentroCostos)
+                {
+                    <option>
+                        @item.Nombre
+                     </option>
+                }
+            }
+
+        </select>
+
+        <label>Roles a agregar</label>
+        <select asp-for="Role" class="form-control" onchange="SelectItem()">
+            <option>Selecciona un Role</option>
+
+            @foreach (var role in Model.Roles)
+            {
+                <option>
+                    @role
+                </option>
+            }
+        </select>
+        
 
         <input type="submit" class="btn btn-primary" value="Eliminar Usuario" onclick="document.getElementById('DeleteUser').value = 'true'" />
         <input type="submit" class="btn btn-primary" value="Consultar Permisos" onclick="document.getElementById('Consultar').value = 'true'" />
-        @*<input type="button" class="btn btn-primary" value="Consultar" onclick="location.href='@Url.Action("ObternerPermisos", "Roles", new {email=Model.Users})'" />*@
-        <h4>Roles a agregar</h4>
-        <ul>
-            @foreach (var role in Model.Roles)
-            {
-                <li>
-                    <input type="radio" asp-for="Role" value="@role" />
-                    @role
-                </li>
-            }
-        </ul>
         <input type="submit" class="btn btn-primary" value="Agregar Role" />
         <input type="hidden" class="btn btn-primary" asp-for="Delete" value="false" id="Eliminar" />
         <input type="hidden" class="btn btn-primary" asp-for="DeleteUser" value="false" id="DeleteUser" />
