Cambios en solicitudes

--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -99,7 +99,7 @@
                                 </td>
                             }
                             @if (@item.Estatus == "Incompleta"|| @item.Estatus == "PorAutorizar" ||
-                              @item.Estatus == "PorComprobar" || @item.Estatus == "PorLiberar"|| @item.Estatus == "Rechazada"||@item.Estatus=="Cancelada")
+                             @item.Estatus == "PorComprobar" || @item.Estatus == "PorLiberar"|| @item.Estatus == "Rechazada"|| @item.Estatus=="Cancelada"|| @item.Estatus == "Revisada")
                             {
                                 <td>
                                     <a class="btn btn-lg">
@@ -158,7 +158,7 @@
                                 "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
                         }
                         else if (item.estatus == "PorAutorizar" || item.estatus == "PorComprobar" ||
-                            item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada")
+                            item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada" || item.estatus =="Revisada")
                         {
                             row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
                                 "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
