--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -151,8 +151,7 @@
                 else {
                     $.each(response, function (index, item) {
                         if (item.estatus == "Incompleta" ) {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
-                                "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" +item.importeSolicitado + "</td><td>" + item.importeComprobado + "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" +
                                 "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
@@ -160,15 +159,13 @@
                         else if (item.estatus == "PorAutorizar" || item.estatus == "PorComprobar" ||
                             item.estatus == "PorLiberar" || item.estatus == "Rechazada" || item.estatus == "Cancelada" || item.estatus =="Revisada")
                         {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
-                                "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + item.importeSolicitado+"</td><td>"+ item.importeComprobado+ "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg' > <i class='fas fa-ban'></i></a >" +
                                 "</td><td>" + "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td></tr>";
                         }
                         else if (item.estatus == "Capturada") {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" + "$" + item.importeSolicitado + " " + item.claveMoneda +
-                                "</td><td>" + "$" + item.importeComprobado + " " + item.claveMoneda + "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>"+ item.importeSolicitado+"</td><td>" + item.importeComprobado + "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/EliminarSolicitud?Folio=" + item.folio + "'><i class='fas fa-eraser'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/ModificarEstatus?Folio=" + item.folio + "'><i class='fas fa-paper-plane'></i></a>" + "</td></tr>";
@@ -176,8 +173,7 @@
                         
 
                         else {
-                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>" +"$"+ item.importeSolicitado + " " +item.claveMoneda+
-                                "</td><td>" + "$" + item.importeComprobado + " " +item.claveMoneda+ "</td><td>" + item.estatus +
+                            row += "<tr><td>" + item.folio + "</td><td>" + item.descripcion + "</td><td>" + item.userName + "</td><td>"+ item.importeSolicitado+"</td><td>"+ item.importeComprobado + "</td><td>" + item.estatus +
                                 "</td><td>" + "<a class='btn btn-lg' href='/Solicitudes/Edit?Folio=" + item.folio + "'><i class='fas fa-edit'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'><i class='fas fa-ban'></i></a>" + "</td><td>" +
                                 "<a class='btn btn-lg'  href='/Home/ModificarEstatus?Folio=" + item.folio + "'><i class='fas fa-paper-plane'></i></a>" + "</td></tr>";
