--- a/TravelExpenses/Views/Comprobacion/Detalles.cshtml
+++ b/TravelExpenses/Views/Comprobacion/Detalles.cshtml
@@ -55,75 +55,133 @@
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <div class="table-responsive">
-                <table id="data-table-basic" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>
-                                Folio
-                            </th>
-                            <th>
-                                UUID
-                            </th>
-                            <th>
-                                Fecha
-                            </th>
-                            <th>
-                                RFC
-                            </th>
-                            <th>
-                                Proveedor
-                            </th>
-                            <th>
-                                Moneda
-                            </th>
-                            <th>
-                                Subtotal
-                            </th>
-                            <th>
-                                Impuestos
-                            </th>
-                            <th>
-                                Total
-                            </th>
-                            <th>
-                                Detalles
-                            </th>
-                            <th>
-                                Descargar
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody id="tblComprobantes">
-                        @if (Model.Comprobantes != null)
-                        {
-                            foreach (var comprobante in Model.Comprobantes)
+            <div class="form-group">
+                <h3 style="color:red;"> @ViewBag.Mensaje</h3>
+                <div class="row">
+                    <div class="col-5">
+                        <a asp-controller="Comprobacion" asp-action="ComprobacionSolicitud" class="btn" id="Button">Cerrar</a>
+
+                    </div>
+                    <div class="col">
+                        <h3>@ViewBag.Script</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tab-content">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#Destinos">Comprobantes </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#Comentarios">Comentarios</a>
+                    </li>
+
+                </ul>
+
+                <div id="Destinos" class="container tab-pane active">
+                    <div class="table-responsive">
+                        <table id="data-table-basic" class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th>
+                                    Folio
+                                </th>
+                                <th>
+                                    UUID
+                                </th>
+                                <th>
+                                    Fecha
+                                </th>
+                                <th>
+                                    RFC
+                                </th>
+                                <th>
+                                    Proveedor
+                                </th>
+                                <th>
+                                    Moneda
+                                </th>
+                                <th>
+                                    Subtotal
+                                </th>
+                                <th>
+                                    Impuestos
+                                </th>
+                                <th>
+                                    Total
+                                </th>
+                                <th>
+                                    Detalles
+                                </th>
+                                <th>
+                                    Descargar
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody id="tblComprobantes">
+                            @if (Model.Comprobantes != null)
                             {
-                                <tr>
-                                    <td>@comprobante.Folio</td>
-                                    <td>@comprobante.UUID</td>
-                                    <td>@comprobante.Fecha</td>
-                                    <td>@comprobante.RFC</td>
-                                    <td>@comprobante.NombreProveedor</td>
-                                    <td>@comprobante.Moneda</td>
-                                    <td>@comprobante.SubTotal</td>
-                                    <td>@comprobante.Impuestos</td>
-                                    <td>@comprobante.Total</td>
-                                    <td>
-                                        <a class="btn btn-lg" asp-controller="Aprobador" asp-action="DetallesComprobacion" asp-route-UUID="@comprobante.UUID">
-                                            <i class="fas fa-edit"></i>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Download" asp-route-UUID="@comprobante.UUID">
-                                            <i class="fas fa-file-download"></i>
-                                        </a>
-                                    </td>
-                                </tr>
+                                foreach (var comprobante in Model.Comprobantes)
+                                {
+                                    <tr>
+                                        <td>@comprobante.Folio</td>
+                                        <td>@comprobante.UUID</td>
+                                        <td>@comprobante.Fecha</td>
+                                        <td>@comprobante.RFC</td>
+                                        <td>@comprobante.NombreProveedor</td>
+                                        <td>@comprobante.Moneda</td>
+                                        <td>@comprobante.SubTotal</td>
+                                        <td>@comprobante.Impuestos</td>
+                                        <td>@comprobante.Total</td>
+                                        <td>
+                                            <a class="btn btn-lg" asp-controller="Aprobador" asp-action="DetallesComprobacion" asp-route-UUID="@comprobante.UUID">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Download" asp-route-UUID="@comprobante.UUID">
+                                                <i class="fas fa-file-download"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                }
                             }
-                        }
-                    </tbody>
-                </table>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+                <div id="Comentarios" class="container tab-pane fade">
+                    <br>
+                    <h3>Comentarios</h3>
+
+                    <div class="container">
+                        <div class="table table-responsive">
+                            <table class="table table-hover text-center">
+                                <thead>
+
+                                <tr>
+                                    <th>#</th>
+                                    <th>Comentario</th>
+
+                                </tr>
+                                </thead>
+                                <tbody>
+                                @foreach (var g in @Model.comentarios)
+                                {
+                                    <tr>
+                                        <td>@g.IdComentarios</td>
+                                        <td>@g.Comentario</td>
+
+                                    </tr>
+                                }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
