Contro de costos con usuario

--- a/TravelExpenses/Views/Roles/Index.cshtml
+++ b/TravelExpenses/Views/Roles/Index.cshtml
@@ -10,7 +10,7 @@
         </div>
 
         <br />
-        <div class="class=" col-lg-6">
+        @*<div class="class=" col-lg-6">
             <h2>Lista de Roles</h2>
             <br />
             <ul>
@@ -21,10 +21,10 @@
                     </li>
                 }
             </ul>
-        </div>
-        <div class="class=" col-lg-6">
+        </div>*@
+        @*<div class="class=" col-lg-6">
             <partial name="_CreateRole" model="new TravelExpenses.Controllers.RoleViewModel()">
-        </div>
+        </div>*@
         <div class="row w-100 mx-0">
             <br />
             <br />
