--- a/TravelExpenses/Views/Roles/Index.cshtml
+++ b/TravelExpenses/Views/Roles/Index.cshtml
@@ -5,6 +5,13 @@
 
     <div>
         <br />
+        @if (Model.Mesaje!= null)
+        {
+            <div class="alert alert-info alert-dismissible fade show">
+                <p><strong>Completado:</strong>@Model.Mesaje</p>
+            </div>
+        }
+        <p> </p>
         <div class="row w-100 mx-0">
             <partial name="_AddUserToRole" model="new TravelExpenses.Controllers.UpdateUserRoleViewModel() { Users = Model.Users, Roles = Model.Roles,CentroCostos=Model.CentroCostos }">
         </div>
