--- a/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
+++ b/TravelExpenses/Views/Home/ListarSolicitudes.cshtml
@@ -72,8 +72,8 @@
                             <td>@item.Folio</td>
                             <td>@item.Descripcion</td>
                             <td>@item.UserName</td>
-                            <td>@item.ImporteSolicitado </td>
-                            <td>@item.ImporteComprobado </td>
+                            <td>@string.Format("{0:C}", @item.ImporteSolicitado)    </td>
+                            <td>@string.Format("{0:C}", @item.ImporteComprobado)</td>
 
                             <td>@item.Estatus</td>
 
