--- a/TravelExpenses/Views/Solicitudes/Edit.cshtml
+++ b/TravelExpenses/Views/Solicitudes/Edit.cshtml
@@ -138,8 +138,7 @@
                                         <table class="table table-hover text-center">
                                             <thead>
 
-                                                <tr>
-                                                    <th>#</th>
+                                                <tr> 
                                                     <th>País destino</th>
                                                     <th>Ciudad Destino</th>
                                                     <th>Fecha de Salida</th>
@@ -155,8 +154,7 @@
 
                                                 @foreach (var destino in @Model.Destinos)
                                                 {
-                                                    <tr>
-                                                        <td>@destino.IdDestinos</td>
+                                                    <tr> 
                                                         <td>@destino.Nombre</td>
                                                         <td>@destino.Descripcion</td>
                                                         <td>@destino.FechaSalida.ToShortDateString()</td>
@@ -213,8 +211,7 @@
                                     <table class="table table-hover text-center">
                                         <thead>
 
-                                            <tr>
-                                                <th>#</th>
+                                            <tr> 
                                                 <th>Empresa</th>
                                                 <th>Concepto</th>
                                                 <th>Monto Máximo</th>
@@ -230,20 +227,19 @@
                                         <tbody>
                                             @foreach (var g in @Model.Gastos)
                                             {
-                                                <tr>
-                                                    <td>@g.IdGastos</td>
+                                                <tr> 
                                                     <td>@g.Empresa</td>
                                                     <td>@g.Nombre</td>
 
 
-                                                    <td>@g.MontoMaximo</td>
+                                                    <td>@string.Format("{0:C}", @g.MontoMaximo)</td>
                                                     @if (@g.MontoMaximo < @g.ImporteSolicitado)
                                                     {
-                                                        <td style="color:red;">@g.ImporteSolicitado</td>
+                                                        <td style="color:red;">@string.Format("{0:C}",  @g.ImporteSolicitado)</td>
                                                     }
                                                     else
                                                     {
-                                                        <td style="color:green;">@g.ImporteSolicitado</td>
+                                                        <td style="color:green;">@string.Format("{0:C}", @g.ImporteSolicitado)</td>
                                                     }
                                                     <td>@g.Descripcion</td>
                                                     <td>@g.TipoCambios</td>
