Cambios en solicitudes

--- a/TravelExpenses/Views/Solicitudes/Edit.cshtml
+++ b/TravelExpenses/Views/Solicitudes/Edit.cshtml
@@ -217,7 +217,7 @@
                                                 <th>Monto Máximo</th>
                                                 <th>Importe Solicitado</th>
                                                 <th>Cantidad comprobada</th>
-                                                <th>Descripcion</th>
+                                                <th>Moneda</th>
                                                 <th>Tipo Cambio</th>
                                                 <th>Editar</th>
                                                 <th>Eliminar</th>
@@ -292,7 +292,7 @@
                                         <thead>
 
                                             <tr>
-                                                <th>#</th>
+                                                 
                                                 <th>Comentario</th>
                                                 
                                             </tr>
@@ -301,7 +301,7 @@
                                             @foreach (var g in @Model.comentarios)
                                             {
                                                 <tr>
-                                                    <td>@g.IdComentarios</td>
+                                                     
                                                     <td>@g.Comentario</td>
                                                     
                                                 </tr>
